fix centering issue

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 				<li class="text"><a href="">Images</a></li>
 				<li class="text"><a href="">Mail</a></li>
 				<li class="text"><a href="">+ Andy</a></li>
+			</ul>
 				
 		</div>
+		<div style="clear:both"></div>
 
 		<div id="main">
 			<img class="google" src="https://www.google.com/images/srpr/logo11w.png">
