--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
 			</form>
 	</div>
 
+	<div id="footer">
+
+			<ul class="left">
+				<li><a href="#">Advertising</a></li>
+				<li class="text"><a href="#">Business</a></li>
+				<li class="text"><a href="#">About</a></li>
+			</ul>
+
+			<ul class="right">
+				<li><a href="#">Privacy & Terms</a></li>
+				<li class="text"><a href="#">Settings</a></li>
+			</ul>
+
+	</div>
+
 	</body>
 
 </html>
